# Rust-Math

./: Cargo.toml  README.md  RUN.md  build_web.sh  check.sh
.github/workflows/: rust.yml
docs/: index.html  rust_math.js  rust_math_bg.wasm  sw.js  test_crate.js  test_crate_bg.wasm
src/: app.rs  lib.rs  main.rs  wrap_app.rs
src/apps/: fibonacci_word.rs  h_tree.rs  mandelbrot.rs  mod.rs  sierpinski.rs
