[package]
name = "rust_math"
version = "0.1.0"
authors = ["Ashay Parikk", "Jimit Gosar", "Dang Khoa Pham"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
