[package]
name = "rust_math"
version = "0.1.0"
authors = ["Ashay Parikk", "Jimit Gosar", "Dang Khoa Pham"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
eframe = "0.15.0" # Gives us egui, epi and web+native backends


serde = { version = "1", features = ["derive"], optional = true }
time = "*"

[features]
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
rand = "0.8.4"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]
