[package]
name = "rust_math"
version = "0.1.0"
authors = ["Ashay Parikk", "Jimit Gosar", "Dang Khoa Pham"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
eframe = "0.15.0" # Gives us egui, epi and web+native backends
rand = "0.8.4"

[features]

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]